--- a/_posts/2022-10-07-nes.markdown
+++ b/_posts/2022-10-07-nes.markdown
@@ -326,11 +326,13 @@ where $\mathbf{s}\_{k:\lambda}$ denotes the $k$-th best sample in local coordina
 
 ## References
 {: #references}
-[1] Daan Wierstra, et al. [Natural Evolution Strategies](https://people.idsia.ch/~juergen/nes2008.pdf). IEEE World Congress on Computational Intelligence, 2008.
+[1] Daan Wierstra, Tom Schaul, Jan Peters, Jürgen Schmidhuber. [Natural Evolution Strategies](https://people.idsia.ch/~juergen/nes2008.pdf). IEEE World Congress on Computational Intelligence, 2008.
 
-[2] Daan Wierstra, et al. [Natural Evolution Strategies](https://www.jmlr.org/papers/volume15/wierstra14a/wierstra14a.pdf). Journal of Machine Learning Research 15 (2014).
+[2] Daan Wierstra, Tom Schaul, Tobias Glasmachers, Yi Sun, Jürgen Schmidhuber. [Natural Evolution Strategies](https://arxiv.org/abs/1106.4487). arXiv:1106.4487, 2011.
 
-[3] Ha, David. [A Visual Guide to Evolution Strategies](https://blog.otoro.net/2017/10/29/visual-evolution-strategies/). blog.otoro.net, 2017.
+[3] Daan Wierstra, Tom Schaul, Tobias Glasmachers, Yi Sun, Jan Peters, Jürgen Schmidhuber. [Natural Evolution Strategies](https://www.jmlr.org/papers/volume15/wierstra14a/wierstra14a.pdf). Journal of Machine Learning Research 15 (2014).
+
+[4] Ha, David. [A Visual Guide to Evolution Strategies](https://blog.otoro.net/2017/10/29/visual-evolution-strategies/). blog.otoro.net, 2017.
 
 ## Footnotes
 {: #footnotes}
