--- a/_posts/2022-09-14-cma-es.markdown
+++ b/_posts/2022-09-14-cma-es.markdown
@@ -263,8 +263,8 @@ The global minimum of $f(\mathbf{x})$ is $0$ at $\mathbf{x}=\mathbf{0}$. We will
 
 The result obtained is illustrated in the following figure.
 <figure>
-	<img src="/assets/images/2022-09-14/dim-popsize-exp.png" alt="cma-es on rastrigin" style="display: block; margin-left: auto; margin-right: auto;"/>
-	<figcaption style="text-align: center;font-style: italic;"><b>Figure 1</b>: Success rate to reach $f_\text{stop}=10^{-10}$  versus population size for Rastrigin function.<br> The code can be found <span markdown="1">[here](https://github.com/trunghng/evolution-strategies/blob/main/dim-popsize-exp.py)</span></figcaption>
+	<img src="/assets/images/2022-09-14/dim-popsize-exp.png" alt="CMA-ES on rastrigin" style="display: block; margin-left: auto; margin-right: auto;"/>
+	<figcaption style="text-align: center;font-style: italic;"><b>Figure 1</b>: Success rate to reach $f_\text{stop}=10^{-10}$ versus population size for Rastrigin function.<br> The code can be found <span markdown="1">[here](https://github.com/trunghng/evolution-strategies/blob/main/dim-popsize-exp.py)</span></figcaption>
 </figure>
 
 ## References
